--- a/expanding-cards/index.html
+++ b/expanding-cards/index.html
@@ -11,31 +11,72 @@
 
 <body>
     <div class="container">
+        <!-- Panel Start -->
+
         <div class="panel active"
-            style="background-image: url('https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
-            <h3> Explore The World </h3>
+            style="background-image: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 7%, rgba(255,255,255,0)50%),
+            url('https://images.unsplash.com/photo-1526029655228-b7ee496c7819?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');">
+            <div class="details">
+                <h3> Salar De Uyuni </h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa animi, cum qui modi, nobis eveniet,
+                    praesentium voluptatem accusantium molestias quis perferendis? Est, mollitia corrupti? Obcaecati
+                    perferendis consectetur eum suscipit accusamus?</p>
+            </div>
         </div>
 
+        <!-- Panel End -->
+
+        <!-- Panel Start -->
         <div class="panel"
-            style="background-image: url('https://images.unsplash.com/photo-1572276596237-5db2c3e16c5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
-            <h3> Wild Forest</h3>
+            style="background-image: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 7%, rgba(255,255,255,0)50%),
+        url('https://images.unsplash.com/photo-1548820524-7c4742f76035?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80');">
+            <div class="details">
+                <h3> Lake Natron </h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa animi, cum qui modi, nobis eveniet,
+                    praesentium voluptatem accusantium molestias quis perferendis? Est, mollitia corrupti? Obcaecati
+                    perferendis consectetur eum suscipit accusamus?</p>
+            </div>
         </div>
+        <!-- Panel End -->
 
+        <!-- Panel Start -->
         <div class="panel"
-            style="background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80');">
-            <h3> Sunny Beach</h3>
+            style="background-image: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 7%, rgba(255,255,255,0)50%),
+        url('https://images.unsplash.com/photo-1425913397330-cf8af2ff40a1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80');">
+            <div class="details">
+                <h3> Crooked Forest </h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa animi, cum qui modi, nobis eveniet,
+                    praesentium voluptatem accusantium molestias quis perferendis? Est, mollitia corrupti? Obcaecati
+                    perferendis consectetur eum suscipit accusamus?</p>
+            </div>
         </div>
+        <!-- Panel End -->
 
+        <!-- Panel Start -->
         <div class="panel"
-            style="background-image: url('https://images.unsplash.com/photo-1551009175-8a68da93d5f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80');">
-            <h3> City On Nature</h3>
+            style="background-image: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 7%, rgba(255,255,255,0)50%),
+            url('https://images.unsplash.com/photo-1533914772478-15cc30e93990?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80');">
+            <div class="details">
+                <h3> Underwater </h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa animi, cum qui modi, nobis eveniet,
+                    praesentium voluptatem accusantium molestias quis perferendis? Est, mollitia corrupti? Obcaecati
+                    perferendis consectetur eum suscipit accusamus?</p>
+            </div>
         </div>
+        <!-- Panel End -->
 
+        <!-- Panel Start -->
         <div class="panel"
-            style="background-image: url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
-            <h3>Mountains - Clouds</h3>
+            style="background-image: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 7%, rgba(255,255,255,0)50%),
+            url('https://images.unsplash.com/photo-1580802037242-3f37ff600884?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=889&q=80');">
+            <div class="details">
+                <h3> Painted Hills </h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa animi, cum qui modi, nobis eveniet,
+                    praesentium voluptatem accusantium molestias quis perferendis? Est, mollitia corrupti? Obcaecati
+                    perferendis consectetur eum suscipit accusamus?</p>
+            </div>
         </div>
-
+        <!-- Panel End -->
     </div>
     <script src="./assets/js/app.js"></script>
 </body>
